background property in css

--- a/css-basics/3_borders.html
+++ b/css-basics/3_borders.html
@@ -29,6 +29,15 @@
             border-top-left-radius: 30px;
             border-bottom-left-radius: 30px;
         }
+
+        /*
+            background-image: url();
+            background-repeat:no-repeat;
+            background-size: cover;
+            background-position: 100px 100px
+        */
+
+        
     </style>
 </head>
 <body>
