--- a/Hotel_Website/index.html
+++ b/Hotel_Website/index.html
@@ -15,7 +15,16 @@
 <body>
 
     <header>
-        
+        <nav id="navbar">
+            <div class="container">
+                <h1 class="logo"><a href="index.html">HBT</a></h1>
+                <ul>
+                    <li><a class="current" href="">HOME</a></li>
+                    <li><a href="">ABOUT</a></li>
+                    <li><a href="">CONTACT</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
 </body>
 
