--- a/Hotel_Website/index.html
+++ b/Hotel_Website/index.html
@@ -25,6 +25,17 @@
                 </ul>
             </div>
         </nav>
+
+        <div id="showcase">
+            <div class="container">
+                <div class="showcase-context">
+                    <h1><span class="text-primary">Enjoy</span> your stay</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam sapiente itaque magnam perferendis similique commodi?</p>
+                    <a href="about.html">About Our Hotel</a>
+                </div>
+            </div>
+        </div>
+
     </header>
 </body>
 
