--- a/Hotel_Website/index.html
+++ b/Hotel_Website/index.html
@@ -30,8 +30,8 @@
             <div class="container">
                 <div class="showcase-context">
                     <h1><span class="text-primary">Enjoy</span> your stay</h1>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam sapiente itaque magnam perferendis similique commodi?</p>
-                    <a href="about.html">About Our Hotel</a>
+                    <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam sapiente itaque magnam perferendis similique commodi?</p>
+                    <a class="btn" href="about.html">About Our Hotel</a>
                 </div>
             </div>
         </div>
