hotel website design complete

--- a/Hotel_Website/index.html
+++ b/Hotel_Website/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to Our Services">
     <meta name="keyword" content="hotel,chapra,bihar">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Hotel HP | Welcome</title>
 </head>
@@ -30,13 +30,54 @@
             <div class="container">
                 <div class="showcase-context">
                     <h1><span class="text-primary">Enjoy</span> your stay</h1>
-                    <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam sapiente itaque magnam perferendis similique commodi?</p>
+                    <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam sapiente itaque
+                        magnam perferendis similique commodi ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+                        sapiente itaque magnam perferendis similique commodiipsum dolor sit amet consectetur adipisicing
+                        elit. Aperiam sapiente itaque magnam perferendis similique commodi?</p>
                     <a class="btn" href="about.html">About Our Hotel</a>
                 </div>
             </div>
         </div>
 
     </header>
+
+    <section id="homeInfo" class="bg-dark">
+        <div>
+            <img class="info-img" src="./img/photo-1.jpg">
+        </div>
+        <div class="info-content">
+            <h2><span class="text-primary">The History</span> of our Hotel</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur est placeat, ex reprehenderit autem
+                dolore laborum perferendis aliquid, ducimus fugiat, repellendus expedita suscipit maxime repellat porro
+                ipsa fuga eaque sit esse exercitationem? Blanditiis ab veritatis quos aperiam ipsa incidunt magni,
+                deleniti error facere nihil eligendi officiis possimus enim illum excepturi.</p>
+            <a class="btn btn-light" href="#">Read More</a>
+        </div>
+    </section>
+
+    <section id="features">
+
+        <div class="box">
+            <i class="fa-solid fa-hotel fa-3x"></i>
+            <h3>Great Location</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, quo.</p>
+        </div>
+        <div class="box">
+            <i class="fa-solid fa-hotel fa-3x"></i>
+            <h3>Free Meals</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, quo.</p>
+        </div>
+        <div class="box">
+            <i class="fa-solid fa-hotel fa-3x"></i>
+            <h3>Fitness Room</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, quo.</p>
+        </div>
+
+    </section>
+
+    <div id="footer">
+        <p>Hotel BT © 2023, All RIghts Reserved</p>
+    </div>
 </body>
 
 </html>
