--- a/EdgeLedger/index.html
+++ b/EdgeLedger/index.html
@@ -29,6 +29,13 @@
                 </ul>
             </nav>
         </div>
+        <div class="content">
+            <h1>The Sky Is The Limit</h1>
+            <p>We provide world class financial assistance</p>
+            <a href="#about" class="btn"
+              ><i class="fas fa-chevron-right"></i> Read More</a
+            >
+          </div>
     </header>
 
 </body>
