--- a/EdgeLedger/index.html
+++ b/EdgeLedger/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/utility.css">
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
-      integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ="
-      crossorigin="anonymous"
-    />    <title>Edge Ledger | Welcome</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+        integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
+    <title>Edge Ledger | Welcome</title>
 </head>
+
 <body>
     <header class="hero">
         <div id="navbar">
@@ -32,11 +31,71 @@
         <div class="content">
             <h1>The Sky Is The Limit</h1>
             <p>We provide world class financial assistance</p>
-            <a href="#about" class="btn"
-              ><i class="fas fa-chevron-right"></i> Read More</a
-            >
-          </div>
+            <a href="#about" class="btn"><i class="fas fa-chevron-right"></i> Read More</a>
+        </div>
     </header>
 
+    <main>
+        <!-- About: Icons -->
+        <section id="about" class="icons bg-light">
+            <div class="flex-items">
+                <div>
+                    <i class="fas fa-university fa-2x"></i>
+                    <div>
+                        <h3>Investment Banking</h3>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Tempore, iusto!
+                        </p>
+                    </div>
+                </div>
+                <div>
+                    <i class="fas fa-book-reader fa-2x"></i>
+                    <div>
+                        <h3>Portfolio Manager</h3>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Tempore, iusto!
+                        </p>
+                    </div>
+                </div>
+                <div>
+                    <i class="fas fa-pencil-alt fa-2x"></i>
+                    <div>
+                        <h3>Tax & Custodial</h3>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Tempore, iusto!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- About:Solutions -->
+        <section class="solutions flex-columns">
+            <div class="row">
+                <div class="column1">
+                    <div class="column-1">
+                        <img src="images/home/people.jpg" alt="" />
+                    </div>
+                </div>
+                <div class="column2">
+                    <div class="column-2 bg-primary">
+                        <h2>We provide bespoke solutions</h2>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro optio itaque esse molestias, nesciunt atque!
+                        </p>
+                        <a href="#" class="btn btn-outline">
+                            <i class="fas fa-chevron"></i>
+                            Read More
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
 </body>
+
 </html>
